src/test/run-pass/alt-naked-record-expr.rs
fn main() {
    let x = alt 0 {
      _ => {
        x: 0
      }.x
    };
}
